--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -1,3 +1,31 @@
-<h1>Bem-vindo ao Contatooh</h1>
-<button ng-click="incrementa()">Novo</button>
+<div class="jumbotron">
+  <h1 class="text-center">
+    Bem-vindo ao Contatooh
+  </h1>
+</div>
+
+<button class="btn btn-primary" ng-click="incrementa()">
+  Novo
+</button>
+<input ng-model="filtro" type="search" placeholder="parte do nome">
 <p>Contatos cadastrados: {{total}}</p>
+<div class="table-responsive">
+  <table class="table table-hover">
+    <tr>
+      <th>NOME</th>
+      <th>E-MAIL</th>
+      <th class="text-center">Ação</th>
+    </tr>
+    <tr ng-repeat="contato in contatos | filter: filtro">
+      <td>
+        <a>{{contato.nome}}</a>
+      </td>
+      <td>{{contato.email}}</td>
+      <td class="text-center">
+        <button class="btn btn-warning">
+          Remover
+        </button>
+      </td>
+    </tr>
+  </table>
+</div>
