--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -22,7 +22,7 @@
       </td>
       <td>{{contato.email}}</td>
       <td class="text-center">
-        <button class="btn btn-warning">
+        <button ng-click="remove(contato)" class="btn btn-warning">
           Remover
         </button>
       </td>
