--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -9,6 +9,9 @@
 </button>
 <input ng-model="filtro" type="search" placeholder="parte do nome">
 <p>Contatos cadastrados: {{contatos.length}}</p>
+<p class="text-info" ng-hide="contatos.length">
+Não há contatos cadastrados
+</p>
 <div class="table-responsive">
   <table class="table table-hover">
     <tr>
