--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -3,9 +3,11 @@
     Bem-vindo ao Contatooh
   </h1>
 </div>
-
+<p ng-show="mensagem.texto">
+  {{mensagem.texto}}
+</p>
 <button class="btn btn-primary" ng-click="incrementa()">
-  Novo
+  <a ng-href="#/contato">Novo</a>
 </button>
 <input ng-model="filtro" type="search" placeholder="parte do nome">
 <p>Contatos cadastrados: {{contatos.length}}</p>
@@ -15,13 +17,13 @@ Não há contatos cadastrados
 <div class="table-responsive">
   <table class="table table-hover">
     <tr>
-      <th>NOME</th>
-      <th>E-MAIL</th>
+      <th>Nome</th>
+      <th>E-mail</th>
       <th class="text-center">Ação</th>
     </tr>
     <tr ng-repeat="contato in contatos | filter: filtro">
       <td>
-        <a>{{contato.nome}}</a>
+        <a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a>
       </td>
       <td>{{contato.email}}</td>
       <td class="text-center">
