--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -19,6 +19,7 @@ Não há contatos cadastrados
     <tr>
       <th>Nome</th>
       <th>E-mail</th>
+      <th>Emergência</th>
       <th class="text-center">Ação</th>
     </tr>
     <tr ng-repeat="contato in contatos | filter: filtro">
@@ -26,6 +27,7 @@ Não há contatos cadastrados
         <a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a>
       </td>
       <td>{{contato.email}}</td>
+      <td>{{contato.emergencia.nome}}</td>
       <td class="text-center">
         <button ng-click="remove(contato)" class="btn btn-warning">
           Remover
